[gd_scene load_steps=13 format=3 uid="uid://dn7h6i4twl58u"]

[ext_resource type="PackedScene" uid="uid://bh8vbfdbx3d0j" path="res://models/wall.glb" id="2_3pedb"]
[ext_resource type="Texture2D" uid="uid://bfysrxgyfh20l" path="res://textures/crack.png" id="2_gpcq6"]
[ext_resource type="Script" path="res://scripts/cracked_wall.gd" id="2_vciqh"]
[ext_resource type="Texture2D" uid="uid://cu1c0rnjymrip" path="res://textures/brick-normal.png" id="3_20w3s"]
[ext_resource type="Texture2D" uid="uid://bkx7uywng1tx6" path="res://textures/brick-height.png" id="4_o3djk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2n68p"]
transparency = 1
albedo_texture = ExtResource("2_gpcq6")
uv1_scale = Vector3(3, 3, 3)
texture_filter = 4

[sub_resource type="BoxShape3D" id="BoxShape3D_bnxkv"]
size = Vector3(10, 10, 3.30546)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rfxoo"]
emission_shape = 3
emission_box_extents = Vector3(3, 3, 1)
direction = Vector3(0, 1, 0)
spread = 19.47
flatness = 0.4
gravity = Vector3(0, -30, 0)
initial_velocity_min = 12.0
initial_velocity_max = 15.0

[sub_resource type="Image" id="Image_qyekj"]
data = {
"data": PackedByteArray(218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 91, 49, 56, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 91, 49, 56, 255, 91, 49, 56, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 223, 62, 35, 255, 115, 23, 45, 255, 115, 23, 45, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 115, 23, 45, 255, 115, 23, 45, 255, 223, 62, 35, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 254, 243, 192, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 255, 255, 255, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 59, 23, 37, 255, 59, 23, 37, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 255, 255, 255, 255, 180, 32, 42, 255, 180, 32, 42, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 255, 255, 255, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 254, 243, 192, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 180, 32, 42, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 180, 32, 42, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 180, 32, 42, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 115, 23, 45, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 91, 49, 56, 255, 115, 23, 45, 255, 255, 255, 255, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 255, 255, 255, 255, 115, 23, 45, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 115, 23, 45, 255, 115, 23, 45, 255, 91, 49, 56, 255, 115, 23, 45, 255, 255, 255, 255, 255, 91, 49, 56, 255, 91, 49, 56, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 255, 255, 255, 255, 115, 23, 45, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 115, 23, 45, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 223, 62, 35, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 91, 49, 56, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 218, 224, 234, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 255, 255, 255, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 179, 185, 209, 255, 59, 23, 37, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 255, 255, 255, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 255, 255, 255, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 254, 243, 192, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 115, 23, 45, 255, 254, 243, 192, 255, 180, 32, 42, 255, 180, 32, 42, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 59, 23, 37, 255, 180, 32, 42, 255, 180, 32, 42, 255, 180, 32, 42, 255),
"format": "RGBA8",
"height": 32,
"mipmaps": false,
"width": 32
}

[sub_resource type="ImageTexture" id="ImageTexture_g8sau"]
resource_name = "brick"
image = SubResource("Image_qyekj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fc5s3"]
resource_name = "bricks"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = SubResource("ImageTexture_g8sau")
normal_enabled = true
normal_scale = 0.5
normal_texture = ExtResource("3_20w3s")
heightmap_scale = 2.0
heightmap_texture = ExtResource("4_o3djk")
uv1_scale = Vector3(0.5, 0.5, 1)
uv1_offset = Vector3(0, -2, 0)
texture_filter = 2
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_70xyw"]
material = SubResource("StandardMaterial3D_fc5s3")

[node name="Wall" type="Node3D"]
script = ExtResource("2_vciqh")

[node name="wall" parent="." instance=ExtResource("2_3pedb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="Cube" parent="wall" index="0"]
material_overlay = SubResource("StandardMaterial3D_2n68p")

[node name="StaticBody3D" parent="wall/Cube" index="0"]
collision_layer = 8
collision_mask = 9

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_bnxkv")

[node name="DestroyParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
emitting = false
amount = 15
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_rfxoo")
draw_pass_1 = SubResource("QuadMesh_70xyw")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_body_entered"]

[editable path="wall"]
